fix scrollbar

--- a/src/Main/resources/Frontend/assets/style/Theming.less
+++ b/src/Main/resources/Frontend/assets/style/Theming.less
@@ -223,10 +223,7 @@ textarea:focus {
 //#region Scrollbar
 ::-webkit-scrollbar {
     width: 8px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: var(--background-secondary);
+    height: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -239,12 +236,10 @@ textarea:focus {
 }
 
 ::-webkit-scrollbar-button {
-    background-color: var(--button-default);
-    border: none;
+    display: none;
 }
 
-::-webkit-scrollbar-button:hover {
-    background-color: var(--button-default-hover);
+::-webkit-scrollbar-corner {
+    display: none;
 }
-
 //#endregion
