--- a/src/Main/resources/Frontend/assets/style/index.less
+++ b/src/Main/resources/Frontend/assets/style/index.less
@@ -20,23 +20,3 @@ body {
         clear: both;
     }
 }
-
-//#region Scrollbars 
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-track {
-    background: var(--background-modifier-selected);
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: var(--background-modifier-active);
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: var(--background-modifier-accent); 
-}
-//#endregion
